yaml/hello_arc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-aks-hci-svc
  namespace: hello-aks-hci
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: hello-aks-hci
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-aks-hci
  namespace: hello-aks-hci
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-aks-hci
  template:
    metadata:
      labels:
        app: hello-aks-hci
    spec:
      containers:
      - name: hello-arc
        image: liorkamrat/hello-arc:latest
        ports:
        - containerPort: 8080
